Corrected index.html

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 		padding-top:15px;
 	
 	}
-	.navigation, .pitch, .section1 , .section2, .faq, .footer{
+	.navigation, .pitch, .section1, .section2, .faq, .footer{
 		padding: 10px 0px 10px 0px;	
 	}
 	.video, .thermometer, .order, .social
 	{
-		border:1px dotted;
-		text-align:center;
+		border: 1px dotted;
+		text-align: center;
 	}
 	.video{
 	/* Internal borders have 1 px width this need to add 4X1px to  120px*/
 		height: 124px;
-		line-height:124px;
+		line-height: 124px;
 
 	}
 	.thermometer, .order, .social{
@@ -62,7 +62,7 @@
 	<div class = "rowsubheading">
 	  <div class = "span12">
  	    <p class = "lead">
-	     This is my first bitstarter projec
+	     This is my first bitstarter project
   	    </p>
 	  </div>
 	</div>
@@ -82,24 +82,27 @@
 	     </div>
 	  </div>
 	</div>
-	<div class = "row section 1">
+	<div class = "row section1">
 	  <div class ="span12">
-	    Marketig section 1
+	    Marketing section 1
 	  </div>
+	</div>
+	<div class = "row section2">
   	  <div class ="span12">
-	    Marketig section 2
+	    Marketing section 2
 	  </div>
-	  <div class ="row faq">
+	</div>	
+	<div class ="row faq">
        	    <div class ="span12">
 	      FAQ
 	    </div>
-	  </div>
-	  <div class ="row footer">
+	</div>
+	<div class ="row footer">
        	    <div class ="span12">
 	      Footer
 	    </div>
 	  </div>
-	</div>
+       </div>
 </body>
 </html>
 
