--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
 	    	    <div class = "span 6 blank">
                Blank
 	    </div>
-	    <div class = "span 4 About">
+	    <div class = "span 4 about">
+	       About
 	    </div>
 	</div>
-        <div class = "row-heading">
+        <div class = "row heading">
 	  <div class = "span12">
 	    <h1>Bitstarter title</h1>
 	  </div>
 	</div>
-	<div class = "rowsubheading">
+	<div class = "row subheading">
 	  <div class = "span12">
  	    <p class = "lead">
 	     This is my first bitstarter project
