--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
   <head>
 	<meta charset = "utf-8">
 	<title>My first bitstarter</title>
+	<meta name ="viewport" content = "width=device-width, initial-scale=1.0">
+	<link rel= "stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+
 	<link type "text/css" rel = "stylesheet"
 		href = "http://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 	<style type = "text/css">
-	  body{
-		padding.top:20px;
-		padding.bottom :40px;
+	/*large desktop*/
+	@media(min-width: 980px){
+		body{
+		  padding.top: 60px;		
+		}
+	}
+	
+	body{
+		font-family: 'Open-sans', Helvetica, Arial, sans-serif;
+	}
+	.heading .subheading{
+		font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+		text-align: center;	
 	}
 	.container{
 		width:960px;
 	}
 	p.lead{
-		padding-top:15px;
+		padding-top:1.5%;
+		font-size: 24px;
+		line-height: 30px; 
 	
+	}
+	p{
+		font-size: 18px;			
+		line-height: 24px; 
+
 	}
 	.navigation, .pitch, .section1, .section2, .faq, .footer{
 		padding: 10px 0px 10px 0px;	
@@ -43,6 +63,39 @@
     </style>	
   </head>
 <body>
+	<div class= "navbar navbar-inverse navbar-fixed-top">
+	  <div class = "navbar-inner">
+	    <div class = "container">
+	      <button type = "button" class = "btn btn-navbar" data-toggle ="collapse" 
+				data-target = ".nav-collapse">
+		  <span class = "icon-bar"></span>
+		  <span class = "icon-bar"></span>
+		  <span class = "icon-bar"></span>
+	      </button>
+	      <a class = "brand" href = "#">BitStarter</a>
+	      <div class = "nav-collapse collapse">
+	        <ul class ="nav">
+		  <li class = "active"><a href="#">Home</a></li>
+		  <li><a href="#about">About</a></li>
+		  <li><a href="#contact">Contact</a></li>  
+		</ul>
+	     </div>
+	   </div>
+          </div>
+        </div>
+	<div class = "row-fluid subheading">    	
+	  <div class = "span12">
+	    <h1>Product</h1>
+	  </div>
+	</div>
+	<div class = "row-fluid subheading">    	
+	  <div class = "span12">
+	    <p class = lead">One sentence description</p>
+	  </div>
+	</div>
+		
+
+	
 	<div class = "container">
 	  <div class = "row navigation">
 	    <div class = "span 2 logo">
