--- a/index.html
+++ b/index.html
@@ -14,12 +14,30 @@
 		body{
 		  padding.top: 60px;		
 		}
+		.linediv-l{
+			border-right: 1px white solid;		
+		}
+		.linediv-r{
+			border-left: 1px white solid;		
+		}
+
 	}
-	
+	@media(min-width: 480px){
+		.copy{
+		  padding: 2.5% 10%;		
+		}
+		.linediv-l{
+			border-right: 1px white solid;		
+		}
+		.linediv-r{
+			border-left: 1px white solid;		
+		}
+
+	}	
 	body{
 		font-family: 'Open-sans', Helvetica, Arial, sans-serif;
 	}
-	.heading .subheading{
+	.heading, .subheading{
 		font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 		text-align: center;	
 	}
@@ -37,13 +55,28 @@
 		line-height: 24px; 
 
 	}
+	.pitch{
+		padding: 2.5% 0%;
+	}
+	.order{
+		padding: 2% 0%;	
+	}
+	.actions{
+		background-color: #343434;	
+		padding: 3% 0%;
+	}
+	
+
 	.navigation, .pitch, .section1, .section2, .faq, .footer{
 		padding: 10px 0px 10px 0px;	
 	}
-	.video, .thermometer, .order, .social
+	.video, .thermometer, .order, .social, .statistics
 	{
-		border: 1px dotted;
 		text-align: center;
+	}
+	.statistics h3, .statistics p{
+		
+		color: white;	
 	}
 	.video{
 	/* Internal borders have 1 px width this need to add 4X1px to  120px*/
@@ -90,8 +123,36 @@
 	</div>
 	<div class = "row-fluid subheading">    	
 	  <div class = "span12">
-	    <p class = lead">One sentence description</p>
+	    <p class = "lead">One sentence description</p>
 	  </div>
+	</div>
+	<div class = "row-fluid pitch">    	
+	  <div class = "span5 offset1 video">
+	    <img class = "img-polaroid" src = "http://placehold.it/480x300"/>
+	  </div>
+	  <div class= "span5 actions">
+	    <div class = "span8 offset2">
+	      <div class ="statistics">
+		<div class = "span4">
+		  <div class = "linediv-l">
+		    <h3>1000</h3> <p>backers</p>
+		  </div>	
+		</div>
+		<div class = "span4">
+		  <div class = "linediv-c">
+		    <h3>$6000</h3> <p>of $10,000</p>
+		  </div>	
+		</div>
+		<div class = "span4">
+		  <div class = "linediv-r">
+		    <h3>10</h3> <p>days left</p>
+		  </div>	
+		</div>
+
+	      </div> 
+	    </div>
+	  </div>
+		
 	</div>
 		
 
