--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>My first bitstarter</title>
 	<meta name ="viewport" content = "width=device-width, initial-scale=1.0">
 	<link rel= "stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-
+	<link rel= "stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+	
 	<link type "text/css" rel = "stylesheet"
 		href = "http://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 	<style type = "text/css">
@@ -148,9 +149,22 @@
 		    <h3>10</h3> <p>days left</p>
 		  </div>	
 		</div>
-
 	      </div> 
 	    </div>
+	    <div class = "span10 offset1">
+	      	<div class = "termometer progress active">
+		  <div class = "bar bar-success" style = "width:60%"></div>
+  		  <div class = "bar bar-warning" style = "width:60%"></div>
+		</div>
+	    </div>
+	    <div class ="span6 offset3 order">
+	      	<button class="btn btn-success btn-large">PreOrder</button>
+	    </div>
+	    <div class ="span8 offset2 social">
+	      	<button class="btn btn-twitter"><i class ="icon-twitter"></i> | Twitter</button>
+	      	<button class="btn btn-facebook"><i class ="icon-facebook"></i> | Facebook</button>
+	    </div>
+			
 	  </div>
 		
 	</div>
