--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<meta name ="viewport" content = "width=device-width, initial-scale=1.0">
 	<link rel= "stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 	<link rel= "stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-	
+
+	<script src= "stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+	<script src= "stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+
 	<link type "text/css" rel = "stylesheet"
 		href = "http://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 	<style type = "text/css">
@@ -191,7 +194,41 @@
 	    <img class = "img-polaroid" src = "http://placehold.it/480x300"/>
 	  </div>	
 	</div>
-		
+	<div class ="row-fluid faq">
+	  <div class ="span10 offset1">
+	    <h3>FAQ</h3>
+	    <div class ="accordian" id = "accordian2">
+	      <div class ="accordian-group">
+  	        <div class ="accordian-heading">
+		  <a class ="accordian-toggle" data-toggle = "collapse"
+			data-parent ="#accordian2"href = "#collapseOne">
+			What does FAQ stand for?
+		  </a>
+		</div>
+		<div id ="collapseOne" class ="accordian-body collapse">
+		  <div class ="accordian-inner">
+			Frequently Asked question
+		  </div>
+		</div>
+	      </div>
+	      <div class ="accordian-group">
+  	        <div class ="accordian-heading">
+		  <a class ="accordian-toggle" data-toggle = "collapse"
+			data-parent ="#accordian2"href = "#collapseTwo">
+			What's a frequently asked question?
+		  </a>
+		</div>
+		<div id ="collapseOne" class ="accordian-body collapse">
+		  <div class ="accordian-inner">
+			A question which is commonly asked by user
+		  </div>
+		</div>
+	      </div>
+
+	
+	    </div>  	
+	  </div>	
+	</div>	
 
 	
 	<div class = "container">
