--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
 	div.row{
 		border: 1px solid;
 	}
+	.footer{
+	  color: #cccccc;
+	  text-align: center;	
+	}
+	.footer p{
+	  	font-size: 11px;	
+	}
+	.footer a{
+		color: #ccccff;		
+	}	
 
     </style>	
   </head>
@@ -229,70 +239,14 @@
 	    </div>  	
 	  </div>	
 	</div>	
-
-	
-	<div class = "container">
-	  <div class = "row navigation">
-	    <div class = "span 2 logo">
-               Logo
-	    </div>
-	    	    <div class = "span 6 blank">
-               Blank
-	    </div>
-	    <div class = "span 4 about">
-	       About
-	    </div>
-	</div>
-        <div class = "row heading">
+	<div class ="row-fluid footer">
 	  <div class = "span12">
-	    <h1>Bitstarter title</h1>
+	    <p>This work is licensed under the <a href="http://creativecommons.org">cc by sa 3.0</a>	
+	     without al the cluft that would otherwise be put at the bottom of the page</p>
 	  </div>
 	</div>
-	<div class = "row subheading">
-	  <div class = "span12">
- 	    <p class = "lead">
-	     This is my first bitstarter project
-  	    </p>
-	  </div>
-	</div>
-        <div class = "row pitch"> 
-	  <div class = "span6 video">
-	     Video
-	  </div>
-	  <div class = "span6">
-	     <div class = "thermometer">
-	       Thermometer
-	     </div>
-	     <div class = "order">
-	       Order
-	     </div>
-	     <div class = "social">
-	       Social
-	     </div>
-	  </div>
-	</div>
-	<div class = "row section1">
-	  <div class ="span12">
-	    Marketing section 1
-	  </div>
-	</div>
-	<div class = "row section2">
-  	  <div class ="span12">
-	    Marketing section 2
-	  </div>
-	</div>	
-	<div class ="row faq">
-       	    <div class ="span12">
-	      FAQ
-	    </div>
-	</div>
-	<div class ="row footer">
-       	    <div class ="span12">
-	      Footer
-	    </div>
-	  </div>
        </div>
-</body>
+  </body>
 </html>
 
 
