--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 	   </div>
           </div>
         </div>
-	<div class = "row-fluid subheading">    	
+	<div class = "row-fluid heading">    	
 	  <div class = "span12">
-	    <h1>Product</h1>
+	    <h1>Product: Development version</h1>
 	  </div>
 	</div>
 	<div class = "row-fluid subheading">    	
