Added bitcoin button

--- a/index.html
+++ b/index.html
@@ -194,7 +194,12 @@
 		</div>
 	    </div>
 	    <div class ="span6 offset3 order">
-	      	<button class="btn btn-success btn-large">PreOrder</button>
+	      	<a class="coinbase-button" data-code="fc244a20b2574f93f80cd4115f1c2a87" 
+		data-button-style="custom_large"
+		data-button-text ="PreOrder with Bitcoin" 
+		href="https://coinbase.com/checkouts/fc244a20b2574f93f80cd4115f1c2a87">
+		PreOrder With Bitcoin</a>
+		<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	    </div>
 	    <div class ="span8 offset2 social">
 		<!-- AddThis Button BEGIN -->
